# complex_neural_source_localization

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  Makefile  README.md  generate_dataset.py  main.py  requirements.txt  run_experiment.py  setup.cfg  setup.py  train.py
complex_neural_source_localization/: dataset.py  dcase_2019_task3_dataset.py  feature_extractors.py  loss.py  model.py  trainer.py
config/: base_dataset.yaml  config.yaml  dataset.yaml  dcase_2019_task3_dataset.yaml  model.yaml  test_dataset.yaml  training.yaml  training_dataset.yaml  validation_dataset.yaml
datasets/: README.md  acoustics_simulator.py  dataset.py  dcase_2019_task3_dataset.py  generate_dataset.py  generate_dataset_sample.py  generate_microphone_samples.py  generate_random_configs.py  generate_training_sample.py  logger.py  math_utils.py  random.py  settings.py  visualization.py
experiments/: run_experiment.py  settings.py
neural_tdoa/: callbacks.py  crnns.py  feature_extractors.py  loss.py  metrics.py  model.py  settings.py  test_train.py  train.py  trainer.py
notebooks/: DOA Visualization.ipynb  Model Visualization.ipynb  Model visualization.ipynb  Reverberation Autocorrelation.ipynb  Test Model.ipynb
tdoa/: Reverberation Autocorrelation.ipynb  correlation.py  math.py  math_utils.py  metrics.py  srp.py  tdoa.py  visualization.py
tests/: .gitignore  _test_srp.py  test_annotation_frame_creator.py  test_complex.py  test_conv_stft.py  test_correlation.py  test_crnn10.py  test_dcase_2019_task3_dataset.py  test_dcase_2021_task3_annotation.py  test_feature_extractors.py  (+19 more)
(+46 files in other folders)
