[metadata]
name = neural_tdoa_beta
version = 0.0.1
author = Eric Grinstein
author_email = e.grinstein@imperial.ac.uk
description = Evaluate feature extractor influence on neural source localization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/egrinstein/neural_tdoa
project_urls =
    Bug Tracker = https://github.com/egrinstein/neural_tdoa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = neural_tdoa
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src